apps/usenet/radarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: usenet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: ghcr.io/linuxserver/radarr:6.4.4.10685-ls319
          ports:
            - containerPort: 7878
          volumeMounts:
            - mountPath: /config
              name: data
            - mountPath: /config/Backups
              name: backup
            - mountPath: /movies
              name: movies
            - mountPath: /downloads
              name: downloads
          startupProbe:
            tcpSocket:
              port: 7878
            failureThreshold: 30
            periodSeconds: 5
            timeoutSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 7878
            failureThreshold: 2
            periodSeconds: 30
            timeoutSeconds: 5
      restartPolicy: Always
      automountServiceAccountToken: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: radarr-data
        - name: backup
          persistentVolumeClaim:
            claimName: radarr-backup
        - name: movies
          hostPath:
            path: /mnt/tank/media/movies
            type: Directory
        - name: downloads
          hostPath:
            path: /mnt/disk04/downloads/complete
            type: Directory
