apps/usenet/radarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: usenet
spec:
  ports:
    - port: 7878
      targetPort: 7878
  selector:
    app: radarr
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  type: ClusterIP
