apps/usenet/radarr/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: usenet
spec:
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
      sectionName: external-https
    - name: internal
      namespace: envoy-gateway-system
      sectionName: internal-https
  hostnames:
    - radarr.${BASE_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: radarr
          port: 7878
